--- a/index.html
+++ b/index.html
@@ -60,9 +60,11 @@
               <h1 class="heading_about">About us </h1>
               <p class="dash"></p>
               <p class="about_description"><span class="welcome__line">Welcome to</span> <span class="name">HOMIANS</span><br> <br>
-                HOMIANS ECOSYSTEM is your second home, where you will receive Healthy, Hygienic, and Delicious Homemade Basic Meals (Breakfast, Lunch, and Dinner) prepared by House Moms (in their own homes) on a daily basis, along with the highest quality Service.. <br> <br>
-                
-                HOMIANS gives you complete Transparency over what you eat, as well as Affordability so that everyone can afford it and Flexibility so that you can eat whatever you want :)</p>
+                HOMIANS gives you complete Transparency over 
+                what you eat, as well as Affordability so that 
+                everyone can afford it and Flexibility so that 
+                you can eat whatever you want :) <br> <br>
+                </p>
           </div>
           <div class="img_about">
               <img class="image_about" src="https://cdn.discordapp.com/attachments/891025496601661504/964046903027335189/unknown.png"></img>
@@ -122,12 +124,12 @@
     <div class="card_3">
       <img id="gajar2" class="gajar1" src="https://cdn.discordapp.com/attachments/891025496601661504/967524587216715876/unknown.png"></img>
       <p class="abt__card__heading1">Online Order</p>
-      <p class="abt__heading1">With our Digital Cloud Kitchens, you can eat according to your own diet plan without any worries</p>
+      <p class="abt__heading1">With our Digital Cloud Kitchens, you can eat according to your own diet plan.</p>
     </div>
     <div class="card_4">
       <img class="gajar1" src="https://cdn.discordapp.com/attachments/891025496601661504/967524836287074344/unknown.png"></img>
       <p class="abt__card__heading1">Value For Money</p>
-      <p class="abt__heading1">With our Digital Cloud Kitchens, you can eat according to your own diet plan without any worries</p>
+      <p class="abt__heading1">With our Digital Cloud Kitchens, you can eat according to your own diet plan </p>
     </div>            
   </div>     
 
@@ -273,7 +275,7 @@
 
 
 
-  <div class="footer">
+  <!-- <div class="footer">
     <div class="footer_back">
       <img class="footer_img" src="https://cdn.discordapp.com/attachments/891025496601661504/964926844958834688/Group_18.png"></img>
       <div class="fgh">
@@ -327,6 +329,6 @@
     <div class="mohit">
     <p>2022 ©All Rights Reserved By @HOMIANS</p></div>
     </div>
-    </div>   
+    </div>    -->
 </body>
 </html>
