--- a/index.html
+++ b/index.html
@@ -76,14 +76,14 @@
           <p class="chef">Home Chefs <br> <span class="house_moms">HOUSE MOMS</span> </p>
           <p class="vertical__dash2"></p>
           <h2 id="count2" class="customer_count">200+</h2>
-          <!-- <p  class="plus__sign"></p> -->
+         
           <p class="customer">Happy <br> <span class="subscribed__">Subscribed</span>  <br> <span class="subscribed__"> Customers</span></p>
       </div>
       <div class="row2">
           <h1 class="service">Services We Provide</h1>
           
       </div>
-      <div class="card_parent">
+      <!-- <div class="card_parent">
         <div class="card1"> 
           <img class="gajar" src="https://cdn.discordapp.com/attachments/891025496601661504/967491657798914078/unknown.png"></img>
           <p class="abt__card__heading"> Categorized Diet</p>
@@ -270,7 +270,7 @@
         Insights &
         Reports</p>
     </div>
-  </div>
+  </div> -->
 
 
 
